--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1,27 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Notebook.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!nvidia-smi"
-      ],
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,11 +10,10 @@
         "id": "-iwQ1KtqN0iJ",
         "outputId": "1b63beea-4555-4565-c140-f550f17161f3"
       },
-      "execution_count": 46,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mon Jan 24 17:53:07 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -57,16 +37,19 @@
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
+      ],
+      "source": [
+        "!nvidia-smi"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Setup"
-      ],
       "metadata": {
         "id": "ujN_E5qwBwH4"
-      }
+      },
+      "source": [
+        "#Setup"
+      ]
     },
     {
       "cell_type": "code",
@@ -80,8 +63,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'PaddleOCR-Vietnamese'...\n",
             "remote: Enumerating objects: 351, done.\u001b[K\n",
@@ -99,9 +82,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd /content/PaddleOCR-Vietnamese"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,54 +90,53 @@
         "id": "BVsvG_vd4CwZ",
         "outputId": "8d8f545a-c749-409f-facf-4b40e8216acf"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/PaddleOCR-Vietnamese\n"
           ]
         }
+      ],
+      "source": [
+        "%cd /content/PaddleOCR-Vietnamese"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -r requirements.txt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ezEN8KZB3aFm"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -r requirements.txt"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install paddlepaddle-gpu"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "xnHD3FGp6u7M"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install paddlepaddle-gpu"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Download data"
-      ],
       "metadata": {
         "id": "JeAAlSsRB0wX"
-      }
+      },
+      "source": [
+        "#Download data"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gdown --id 1UUQhNvzgpZy7zXBFQp0Qox-BBjunZ0ml\n",
-        "!unzip vietnamese_original.zip -d train"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -164,11 +144,10 @@
         "id": "snQl197R4HuY",
         "outputId": "1de13309-93c5-4dc2-937b-094a04ad885a"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1UUQhNvzgpZy7zXBFQp0Qox-BBjunZ0ml\n",
@@ -176,61 +155,62 @@
             "100% 1.05G/1.05G [00:10<00:00, 97.3MB/s]\n"
           ]
         }
+      ],
+      "source": [
+        "!gdown --id 1UUQhNvzgpZy7zXBFQp0Qox-BBjunZ0ml\n",
+        "!unzip vietnamese_original.zip -d train"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Train"
-      ],
       "metadata": {
         "id": "2lXUmzQoCAn_"
-      }
+      },
+      "source": [
+        "#Train"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Train model detection\n"
-      ],
       "metadata": {
         "id": "ef0Z-TlCCYY8"
-      }
+      },
+      "source": [
+        "##Train model detection\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Tiền xử lý dữ liệu train model detection"
-      ],
       "metadata": {
         "id": "2x19aSLuCNgb"
-      }
+      },
+      "source": [
+        "Tiền xử lý dữ liệu train model detection"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 ConvertFromBtcToFormatPaddle.py"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "KVWsgLu74kou"
       },
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!python3 ConvertFromBtcToFormatPaddle.py"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Download pretrain model SAST"
-      ],
       "metadata": {
         "id": "YvRmlYkACIkM"
-      }
+      },
+      "source": [
+        "Download pretrain model SAST"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://paddleocr.bj.bcebos.com/dygraph_v2.0/en/det_r50_vd_sast_icdar15_v2.0_train.tar -P ./pretrain_models\n",
-        "!tar -xf ./pretrain_models/det_r50_vd_sast_icdar15_v2.0_train.tar -C /content/PaddleOCR-Vietnamese/pretrain_models"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -238,11 +218,10 @@
         "id": "rbGqJWhY7gbL",
         "outputId": "af0cb944-6e14-4b8e-908e-61a4228db360"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2022-01-24 16:41:50--  https://paddleocr.bj.bcebos.com/dygraph_v2.0/en/det_r50_vd_sast_icdar15_v2.0_train.tar\n",
             "Resolving paddleocr.bj.bcebos.com (paddleocr.bj.bcebos.com)... 103.235.46.61, 2409:8c04:1001:1002:0:ff:b001:368a\n",
@@ -257,125 +236,134 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!wget https://paddleocr.bj.bcebos.com/dygraph_v2.0/en/det_r50_vd_sast_icdar15_v2.0_train.tar -P ./pretrain_models\n",
+        "!tar -xf ./pretrain_models/det_r50_vd_sast_icdar15_v2.0_train.tar -C /content/PaddleOCR-Vietnamese/pretrain_models"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Training"
-      ],
       "metadata": {
         "id": "bs22YV66D4nt"
-      }
+      },
+      "source": [
+        "Training"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 tools/train.py -c ./configs/det/SAST.yml"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_0Zm69Gh479p"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!python3 tools/train.py -c ./configs/det/SAST.yml"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Train model recognition"
-      ],
       "metadata": {
         "id": "ec9vdmk0Cbwf"
-      }
+      },
+      "source": [
+        "##Train model recognition"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Tiền xử lý dữ liệu train model recognition"
-      ],
       "metadata": {
         "id": "pKKMNb1nCdxp"
-      }
+      },
+      "source": [
+        "Tiền xử lý dữ liệu train model recognition"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 crop_image.py"
-      ],
+      "execution_count": 14,
       "metadata": {
         "id": "wyI9DtN187OW"
       },
-      "execution_count": 14,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!python3 crop_image.py"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Training"
-      ],
       "metadata": {
         "id": "h8biNzPtD1sS"
-      }
+      },
+      "source": [
+        "Training"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 tools/train.py -c ./configs/rec/SRN.yml "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "65IK5TgnApT-"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!python3 tools/train.py -c ./configs/rec/SRN.yml "
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Evaluation"
-      ],
       "metadata": {
         "id": "ivX-knUJChsB"
-      }
+      },
+      "source": [
+        "#Evaluation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#evaluation model detection\n",
-        "!python3 tools/eval.py -c SAST.yml \\\n",
-        "                       -o Global.checkpoints _model=path_checkpoints "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nBd3mDFaBhQw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#evaluation model detection\n",
+        "!python3 tools/eval.py -c SAST.yml \\\n",
+        "                       -o Global.checkpoints_model=path_checkpoints "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1x-58sfkBlNB"
+      },
+      "outputs": [],
       "source": [
         "#evaluation model recognition\n",
         "!python3 tools/eval.py -c ./configs/rec/SRN.yml  \\\n",
         "                       -o Global.checkpoints=.path_checkpoints \\\n",
         "                          Global.character_type=ch  \\\n",
         "                          Global.character_dict_path=./ppocr/utils/dict/vi_vietnam.txt "
-      ],
-      "metadata": {
-        "id": "1x-58sfkBlNB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Convert to inference model"
-      ],
       "metadata": {
         "id": "oewHocs6CpQ4"
-      }
+      },
+      "source": [
+        "#Convert to inference model"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "M2Y5TBTuBmuV"
+      },
+      "outputs": [],
       "source": [
         "!python3 tools/export_model.py -c ./configs/det/SAST.yml  \\\n",
         "                              -o Global.pretrained_model= #path_pretrained \\\n",
@@ -384,31 +372,20 @@
         "!python3 tools/export_model.py -c ./configs/rec/SRN.yml .\n",
         "                              -o Global.pretrained_model= #path_pretrained \\\n",
         "                                 Global.save_inference_dir=./inference/SRN"
-      ],
-      "metadata": {
-        "id": "M2Y5TBTuBmuV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Sau khi convert xong thì predict với model trên"
-      ],
       "metadata": {
         "id": "8mQqyq02C53r"
-      }
+      },
+      "source": [
+        "Sau khi convert xong thì predict với model trên"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Download model inference\n",
-        "!gdown --id 1slORHgS8awv7BeuSDahJvV1POPQtP_I_\n",
-        "!gdown --id 1-M5EMuLyFlOfp2bNMX6tibNmY3WReIxo\n",
-        "!unzip SAST.zip -d inference\n",
-        "!unzip SRN.zip -d inference"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -416,11 +393,10 @@
         "id": "zkhsIHzgGXTN",
         "outputId": "8a8f961c-d3a4-4377-a996-fdefbef9eb7a"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1slORHgS8awv7BeuSDahJvV1POPQtP_I_\n",
@@ -442,16 +418,18 @@
             "  inflating: inference/SRN/inference.pdmodel  \n"
           ]
         }
+      ],
+      "source": [
+        "#Download model inference\n",
+        "!gdown --id 1slORHgS8awv7BeuSDahJvV1POPQtP_I_\n",
+        "!gdown --id 1-M5EMuLyFlOfp2bNMX6tibNmY3WReIxo\n",
+        "!unzip SAST.zip -d inference\n",
+        "!unzip SRN.zip -d inference"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#predict detection\n",
-        "!python3 tools/infer/predict_det.py --det_algorithm=\"SAST\" --use_gpu=True \\\n",
-        "                                    --det_model_dir=\"./inference/SAST\"  \\\n",
-        "                                    --image_dir=./train/vietnamese/unseen_test_images/im1502.jpg"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -459,11 +437,10 @@
         "id": "BD-4aUDkBrDH",
         "outputId": "d7699700-2768-4c8d-96a5-d949c4a93b6d"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/skimage/data/__init__.py:107: DeprecationWarning: \n",
             "    Importing file_hash from pooch.utils is DEPRECATED. Please import from the\n",
@@ -477,20 +454,17 @@
             "[2022/01/24 17:27:48] root INFO: The visualized image saved in ./inference_results/det_res_im1502.jpg\n"
           ]
         }
+      ],
+      "source": [
+        "#predict detection\n",
+        "!python3 tools/infer/predict_det.py --det_algorithm=\"SAST\" --use_gpu=True \\\n",
+        "                                    --det_model_dir=\"./inference/SAST\"  \\\n",
+        "                                    --image_dir=./train/vietnamese/unseen_test_images/im1502.jpg"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#predict recognition\n",
-        "!python3 tools/infer/predict_rec.py --image_dir=\"./train/img_crop/im0001_0.jpg\" \\\n",
-        "                                    --use_gpu=True \\\n",
-        "                                    --rec_algorithm=\"SRN\" \\\n",
-        "                                    --rec_model_dir=\"./inference/SRN/\"  \\\n",
-        "                                    --rec_image_shape=\"1, 64, 256\"  \\\n",
-        "                                    --rec_char_type=\"ch\"   \\\n",
-        "                                    --rec_char_dict_path=\"./ppocr/utils/dict/vi_vietnam.txt\""
-      ],
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -498,11 +472,10 @@
         "id": "XPyiwn_UC4oG",
         "outputId": "f097e8f1-03d3-479a-a545-57de34942c91"
       },
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/skimage/data/__init__.py:107: DeprecationWarning: \n",
             "    Importing file_hash from pooch.utils is DEPRECATED. Please import from the\n",
@@ -513,32 +486,30 @@
             "[2022/01/24 17:27:57] root INFO: Predicts of ./train/img_crop/im0001_0.jpg:('CHẤT', 0.99999535)\n"
           ]
         }
+      ],
+      "source": [
+        "#predict recognition\n",
+        "!python3 tools/infer/predict_rec.py --image_dir=\"./train/img_crop/im0001_0.jpg\" \\\n",
+        "                                    --use_gpu=True \\\n",
+        "                                    --rec_algorithm=\"SRN\" \\\n",
+        "                                    --rec_model_dir=\"./inference/SRN/\"  \\\n",
+        "                                    --rec_image_shape=\"1, 64, 256\"  \\\n",
+        "                                    --rec_char_type=\"ch\"   \\\n",
+        "                                    --rec_char_dict_path=\"./ppocr/utils/dict/vi_vietnam.txt\""
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Text Detection and Recognition Inference Concatenation"
-      ],
       "metadata": {
         "id": "FXWUlkxuCwoM"
-      }
+      },
+      "source": [
+        "#Text Detection and Recognition Inference Concatenation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 ./tools/infer/predict_system.py --use_gpu=True  \\\n",
-        "    --det_algorithm=\"SAST\"  \\\n",
-        "    --det_model_dir=\"./inference/SAST\"  \\\n",
-        "    --rec_algorithm=\"SRN\" \\\n",
-        "    --rec_model_dir=\"./inference/SRN/\"  \\\n",
-        "    --rec_image_shape=\"1, 64, 256\"  \\\n",
-        "    --rec_char_type=\"ch\"  \\\n",
-        "    --drop_score=0.5  \\\n",
-        "    --vis_font_path=font-times-new-roman.ttf \\\n",
-        "    --image_dir=\"./train/vietnamese/unseen_test_images/im1501.jpg\" \\\n",
-        "    --rec_char_dict_path=\"./ppocr/utils/dict/vi_vietnam.txt\" "
-      ],
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,11 +517,10 @@
         "id": "bdlwPIeSIJxf",
         "outputId": "48d62eab-93a6-4f4d-bd0b-68a680bf04d6"
       },
-      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.7/dist-packages/skimage/data/__init__.py:107: DeprecationWarning: \n",
             "    Importing file_hash from pooch.utils is DEPRECATED. Please import from the\n",
@@ -587,7 +557,37 @@
             "The predict total time is 3.848020315170288\n"
           ]
         }
+      ],
+      "source": [
+        "!python3 ./tools/infer/predict_system.py --use_gpu=True  \\\n",
+        "    --det_algorithm=\"SAST\"  \\\n",
+        "    --det_model_dir=\"./inference/SAST\"  \\\n",
+        "    --rec_algorithm=\"SRN\" \\\n",
+        "    --rec_model_dir=\"./inference/SRN/\"  \\\n",
+        "    --rec_image_shape=\"1, 64, 256\"  \\\n",
+        "    --rec_char_type=\"ch\"  \\\n",
+        "    --drop_score=0.5  \\\n",
+        "    --vis_font_path=font-times-new-roman.ttf \\\n",
+        "    --image_dir=\"./train/vietnamese/unseen_test_images/im1501.jpg\" \\\n",
+        "    --rec_char_dict_path=\"./ppocr/utils/dict/vi_vietnam.txt\" "
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Notebook.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
